--- a/sites/all/themes/sub/blog_revamp/sass/_variables.scss
+++ b/sites/all/themes/sub/blog_revamp/sass/_variables.scss
@@ -2,6 +2,8 @@ $blue: #04638a;
 $yellow: #fcc930;
 $dark-grey: #45474b;
 $light-grey: #eae9ef;
+$pink: #ff1493;
+$light-blue: #87ceeb;
 
 $dancing-font: 'Dancing Script', cursive;
 $lobster-font: 'Lobster', cursive;
