--- a/sites/all/themes/sub/blog_revamp/css/home.css
+++ b/sites/all/themes/sub/blog_revamp/css/home.css
@@ -1,4 +1,4 @@
-/* line 10, ../sass/_variables.scss */
+/* line 12, ../sass/_variables.scss */
 .home-page-blogs .view-content {
   display: -webkit-box;
   display: -moz-box;
@@ -7,19 +7,19 @@
   display: flex;
 }
 
-/* line 18, ../sass/_variables.scss */
+/* line 20, ../sass/_variables.scss */
 .home-page-blogs .view-content {
   flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
 }
 
-/* line 24, ../sass/_variables.scss */
+/* line 26, ../sass/_variables.scss */
 img {
   max-width: 100%;
 }
 
-/* line 28, ../sass/_variables.scss */
+/* line 30, ../sass/_variables.scss */
 body.html {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
@@ -28,7 +28,7 @@ body.html {
 
 /* line 3, ../sass/home.scss */
 body.front {
-  background: #eae9ef;
+  background-image: url(../images/Background.png);
 }
 /* line 5, ../sass/home.scss */
 body.front:before {
@@ -86,8 +86,10 @@ body.front .main-container.container {
 /* line 53, ../sass/home.scss */
 .home-page-blogs .view-header {
   margin-bottom: 20px;
+  font-size: 1.4rem;
+  color: #777;
 }
-/* line 57, ../sass/home.scss */
+/* line 59, ../sass/home.scss */
 .home-page-blogs .view-blogs {
   width: 75%;
   margin-left: auto;
@@ -95,13 +97,13 @@ body.front .main-container.container {
   padding-bottom: 50px;
 }
 @media screen and (max-width: 480px) {
-  /* line 57, ../sass/home.scss */
+  /* line 59, ../sass/home.scss */
   .home-page-blogs .view-blogs {
     padding: 0 10px 50px;
     width: 100%;
   }
 }
-/* line 70, ../sass/home.scss */
+/* line 72, ../sass/home.scss */
 .home-page-blogs .view-content .views-row {
   font-size: 1.3rem;
   width: calc(33.33% - 0.5px - 10px);
@@ -112,63 +114,63 @@ body.front .main-container.container {
   padding: 20px;
 }
 @media screen and (max-width: 767px) {
-  /* line 70, ../sass/home.scss */
+  /* line 72, ../sass/home.scss */
   .home-page-blogs .view-content .views-row {
     width: calc(50% - 0.5px - 10px);
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 70, ../sass/home.scss */
+  /* line 72, ../sass/home.scss */
   .home-page-blogs .view-content .views-row {
     width: 100%;
     margin: 0 0px 10px;
   }
 }
-/* line 85, ../sass/home.scss */
+/* line 87, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-title {
   margin-bottom: 12px;
 }
-/* line 87, ../sass/home.scss */
+/* line 89, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-title span {
   font-size: 1.8rem;
   font-weight: 500;
 }
-/* line 92, ../sass/home.scss */
+/* line 94, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-created, .home-page-blogs .view-content .views-row .views-field-name {
   display: inline-block;
   vertical-align: top;
   margin-bottom: 12px;
 }
-/* line 96, ../sass/home.scss */
+/* line 98, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-created.views-field-name, .home-page-blogs .view-content .views-row .views-field-name.views-field-name {
   padding-right: 10px;
 }
-/* line 99, ../sass/home.scss */
+/* line 101, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-created span, .home-page-blogs .view-content .views-row .views-field-name span {
   font-size: 1.2rem;
   color: #777;
   font-style: italic;
 }
-/* line 103, ../sass/home.scss */
+/* line 105, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-created span a, .home-page-blogs .view-content .views-row .views-field-name span a {
   color: #777;
 }
-/* line 108, ../sass/home.scss */
+/* line 110, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-body {
   margin-bottom: 10px;
 }
 
-/* line 115, ../sass/home.scss */
+/* line 117, ../sass/home.scss */
 .home-page-sec-1 {
   padding-bottom: 170px;
 }
 @media screen and (max-width: 767px) {
-  /* line 115, ../sass/home.scss */
+  /* line 117, ../sass/home.scss */
   .home-page-sec-1 {
     padding-bottom: 70px;
   }
 }
-/* line 120, ../sass/home.scss */
+/* line 122, ../sass/home.scss */
 .home-page-sec-1 .overview {
   max-width: 85%;
   margin: auto;
@@ -176,19 +178,19 @@ body.front .main-container.container {
   font-size: 0px;
 }
 @media screen and (max-width: 767px) {
-  /* line 120, ../sass/home.scss */
+  /* line 122, ../sass/home.scss */
   .home-page-sec-1 .overview {
     padding-top: 50px;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 120, ../sass/home.scss */
+  /* line 122, ../sass/home.scss */
   .home-page-sec-1 .overview {
     max-width: 100%;
   }
 }
 @media screen and (min-width: 768px) {
-  /* line 132, ../sass/home.scss */
+  /* line 134, ../sass/home.scss */
   .home-page-sec-1 .overview-image, .home-page-sec-1 .overview-text {
     display: inline-block;
     width: 50%;
@@ -196,30 +198,30 @@ body.front .main-container.container {
   }
 }
 @media screen and (max-width: 767px) {
-  /* line 138, ../sass/home.scss */
+  /* line 140, ../sass/home.scss */
   .home-page-sec-1 .overview-image.overview-image, .home-page-sec-1 .overview-text.overview-image {
     max-width: 400px;
     margin-bottom: 20px;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 138, ../sass/home.scss */
+  /* line 140, ../sass/home.scss */
   .home-page-sec-1 .overview-image.overview-image, .home-page-sec-1 .overview-text.overview-image {
     max-width: 100%;
   }
 }
-/* line 147, ../sass/home.scss */
+/* line 149, ../sass/home.scss */
 .home-page-sec-1 .overview-image img, .home-page-sec-1 .overview-text img {
   border: 6px solid #fff;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
 @media screen and (min-width: 768px) {
-  /* line 151, ../sass/home.scss */
+  /* line 153, ../sass/home.scss */
   .home-page-sec-1 .overview-image.overview-text, .home-page-sec-1 .overview-text.overview-text {
     padding-left: 25px;
   }
 }
-/* line 156, ../sass/home.scss */
+/* line 158, ../sass/home.scss */
 .home-page-sec-1 .overview-image h2, .home-page-sec-1 .overview-text h2 {
   margin: 0;
   font-weight: 700;
@@ -227,12 +229,12 @@ body.front .main-container.container {
   font-size: 3rem;
 }
 @media screen and (max-width: 480px) {
-  /* line 156, ../sass/home.scss */
+  /* line 158, ../sass/home.scss */
   .home-page-sec-1 .overview-image h2, .home-page-sec-1 .overview-text h2 {
     font-size: 2.4rem;
   }
 }
-/* line 164, ../sass/home.scss */
+/* line 166, ../sass/home.scss */
 .home-page-sec-1 .overview-image h2:after, .home-page-sec-1 .overview-text h2:after {
   content: "";
   height: 3px;
@@ -241,13 +243,96 @@ body.front .main-container.container {
   display: block;
   margin-top: 7px;
 }
-/* line 172, ../sass/home.scss */
+/* line 174, ../sass/home.scss */
 .home-page-sec-1 .overview-image h2 span, .home-page-sec-1 .overview-text h2 span {
   display: block;
   text-transform: uppercase;
 }
-/* line 177, ../sass/home.scss */
+/* line 179, ../sass/home.scss */
 .home-page-sec-1 .overview-image p, .home-page-sec-1 .overview-text p {
   font-size: 1.5rem;
   margin-top: 15px;
+}
+
+/* line 186, ../sass/home.scss */
+.home_page_quote_block {
+  display: inline-block;
+  vertical-align: top;
+  width: calc(100% - 355px);
+}
+/* line 190, ../sass/home.scss */
+.home_page_quote_block .quote {
+  width: 80%;
+  color: #ff1493;
+  font-size: 1.5rem;
+  font-weight: 500;
+  font-style: italic;
+  background: aliceblue;
+}
+/* line 197, ../sass/home.scss */
+.home_page_quote_block .quote .quote-inner {
+  background: url(../images/top.png) 15px 10px no-repeat, url(../images/btm.png) right bottom no-repeat;
+  padding: 50px;
+}
+/* line 201, ../sass/home.scss */
+.home_page_quote_block .quote .quote-text {
+  width: 80%;
+  color: #ff1493;
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+/* line 216, ../sass/home.scss */
+.block-webform.contact-form {
+  max-width: 350px;
+  padding: 25px;
+  position: relative;
+  color: #fff;
+  background: #45474b;
+  margin-left: auto;
+  border-radius: 45px 45px 0 0;
+  border-radius: 45px;
+  display: inline-block;
+  vertical-align: top;
+}
+/* line 227, ../sass/home.scss */
+.block-webform.contact-form .block-title {
+  text-transform: uppercase;
+  font-weight: 800;
+  position: relative;
+  margin-bottom: 25px;
+}
+@media screen and (max-width: 480px) {
+  /* line 227, ../sass/home.scss */
+  .block-webform.contact-form .block-title {
+    font-size: 2.4rem;
+  }
+}
+/* line 235, ../sass/home.scss */
+.block-webform.contact-form .block-title:after {
+  content: "";
+  height: 3px;
+  width: 50px;
+  background: #fff;
+  display: block;
+  margin-top: 7px;
+}
+/* line 245, ../sass/home.scss */
+.block-webform.contact-form form label {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+/* line 249, ../sass/home.scss */
+.block-webform.contact-form form .form-actions {
+  text-align: center;
+}
+/* line 251, ../sass/home.scss */
+.block-webform.contact-form form .form-actions button {
+  background: #eae9ef;
+  border: 0;
+  border-radius: 0;
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 500;
+  padding: 5px 30px;
 }
