--- a/sites/all/themes/sub/blog_revamp/sass/general.scss
+++ b/sites/all/themes/sub/blog_revamp/sass/general.scss
@@ -62,10 +62,10 @@
   }
 }
 
-.block-webform.contact-form {
-  max-width: 400px;
-  padding: 20px;
-  position: relative;
-  color: #fff;
-  background: $dark-grey;
+body .footer {
+  border: 0;
 }
+
+// font-weight: 800;
+// color: #FF69B4;
+// font-size: 5rem;
