--- a/sites/all/themes/sub/blog_revamp/css/home.css
+++ b/sites/all/themes/sub/blog_revamp/css/home.css
@@ -112,6 +112,16 @@ body.front .main-container.container {
   box-shadow: 0 2px 21px 0 rgba(0, 0, 0, 0.06);
   border: 1px solid #eee;
   padding: 20px;
+  transition: 0.5s all;
+}
+/* line 81, ../sass/home.scss */
+.home-page-blogs .view-content .views-row:hover {
+  box-shadow: 0 2px 21px 0 rgba(0, 0, 0, 0.1);
+  border: 1px solid #87ceeb;
+}
+/* line 84, ../sass/home.scss */
+.home-page-blogs .view-content .views-row:hover .views-field-title span {
+  color: #87ceeb;
 }
 @media screen and (max-width: 767px) {
   /* line 72, ../sass/home.scss */
@@ -126,40 +136,41 @@ body.front .main-container.container {
     margin: 0 0px 10px;
   }
 }
-/* line 87, ../sass/home.scss */
+/* line 95, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-title {
   margin-bottom: 12px;
 }
-/* line 89, ../sass/home.scss */
+/* line 97, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-title span {
+  transition: 0.5s all;
   font-size: 1.8rem;
   font-weight: 500;
 }
-/* line 94, ../sass/home.scss */
+/* line 103, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-created, .home-page-blogs .view-content .views-row .views-field-name {
   display: inline-block;
   vertical-align: top;
   margin-bottom: 12px;
 }
-/* line 98, ../sass/home.scss */
+/* line 107, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-created.views-field-name, .home-page-blogs .view-content .views-row .views-field-name.views-field-name {
   padding-right: 10px;
 }
-/* line 101, ../sass/home.scss */
+/* line 110, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-created span, .home-page-blogs .view-content .views-row .views-field-name span {
   font-size: 1.2rem;
   color: #777;
   font-style: italic;
 }
-/* line 105, ../sass/home.scss */
+/* line 114, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-created span a, .home-page-blogs .view-content .views-row .views-field-name span a {
   color: #777;
 }
-/* line 110, ../sass/home.scss */
+/* line 119, ../sass/home.scss */
 .home-page-blogs .view-content .views-row .views-field-body {
   margin-bottom: 10px;
 }
-/* line 115, ../sass/home.scss */
+/* line 124, ../sass/home.scss */
 .home-page-blogs .explore-more {
   margin-top: 20px;
   text-align: center;
@@ -184,17 +195,17 @@ body.front .main-container.container {
   background: #04638a;
 }
 
-/* line 120, ../sass/home.scss */
+/* line 129, ../sass/home.scss */
 .home-page-sec-1 {
   padding-bottom: 170px;
 }
 @media screen and (max-width: 767px) {
-  /* line 120, ../sass/home.scss */
+  /* line 129, ../sass/home.scss */
   .home-page-sec-1 {
     padding-bottom: 70px;
   }
 }
-/* line 125, ../sass/home.scss */
+/* line 134, ../sass/home.scss */
 .home-page-sec-1 .overview {
   max-width: 85%;
   margin: auto;
@@ -202,19 +213,19 @@ body.front .main-container.container {
   font-size: 0px;
 }
 @media screen and (max-width: 767px) {
-  /* line 125, ../sass/home.scss */
+  /* line 134, ../sass/home.scss */
   .home-page-sec-1 .overview {
     padding-top: 50px;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 125, ../sass/home.scss */
+  /* line 134, ../sass/home.scss */
   .home-page-sec-1 .overview {
     max-width: 100%;
   }
 }
 @media screen and (min-width: 768px) {
-  /* line 137, ../sass/home.scss */
+  /* line 146, ../sass/home.scss */
   .home-page-sec-1 .overview-image, .home-page-sec-1 .overview-text {
     display: inline-block;
     width: 50%;
@@ -222,30 +233,30 @@ body.front .main-container.container {
   }
 }
 @media screen and (max-width: 767px) {
-  /* line 143, ../sass/home.scss */
+  /* line 152, ../sass/home.scss */
   .home-page-sec-1 .overview-image.overview-image, .home-page-sec-1 .overview-text.overview-image {
     max-width: 400px;
     margin-bottom: 20px;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 143, ../sass/home.scss */
+  /* line 152, ../sass/home.scss */
   .home-page-sec-1 .overview-image.overview-image, .home-page-sec-1 .overview-text.overview-image {
     max-width: 100%;
   }
 }
-/* line 152, ../sass/home.scss */
+/* line 161, ../sass/home.scss */
 .home-page-sec-1 .overview-image img, .home-page-sec-1 .overview-text img {
   border: 6px solid #fff;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
 @media screen and (min-width: 768px) {
-  /* line 156, ../sass/home.scss */
+  /* line 165, ../sass/home.scss */
   .home-page-sec-1 .overview-image.overview-text, .home-page-sec-1 .overview-text.overview-text {
     padding-left: 25px;
   }
 }
-/* line 161, ../sass/home.scss */
+/* line 170, ../sass/home.scss */
 .home-page-sec-1 .overview-image h2, .home-page-sec-1 .overview-text h2 {
   margin: 0;
   font-weight: 700;
@@ -253,12 +264,12 @@ body.front .main-container.container {
   font-size: 3rem;
 }
 @media screen and (max-width: 480px) {
-  /* line 161, ../sass/home.scss */
+  /* line 170, ../sass/home.scss */
   .home-page-sec-1 .overview-image h2, .home-page-sec-1 .overview-text h2 {
     font-size: 2.4rem;
   }
 }
-/* line 169, ../sass/home.scss */
+/* line 178, ../sass/home.scss */
 .home-page-sec-1 .overview-image h2:after, .home-page-sec-1 .overview-text h2:after {
   content: "";
   height: 3px;
@@ -267,24 +278,24 @@ body.front .main-container.container {
   display: block;
   margin-top: 7px;
 }
-/* line 177, ../sass/home.scss */
+/* line 186, ../sass/home.scss */
 .home-page-sec-1 .overview-image h2 span, .home-page-sec-1 .overview-text h2 span {
   display: block;
   text-transform: uppercase;
 }
-/* line 182, ../sass/home.scss */
+/* line 191, ../sass/home.scss */
 .home-page-sec-1 .overview-image p, .home-page-sec-1 .overview-text p {
   font-size: 1.5rem;
   margin-top: 15px;
 }
 
-/* line 189, ../sass/home.scss */
+/* line 198, ../sass/home.scss */
 .home_page_quote_block {
   position: relative;
   text-align: left;
 }
 @media screen and (min-width: 768px) {
-  /* line 189, ../sass/home.scss */
+  /* line 198, ../sass/home.scss */
   .home_page_quote_block {
     display: inline-block;
     vertical-align: top;
@@ -292,12 +303,12 @@ body.front .main-container.container {
   }
 }
 @media screen and (max-width: 767px) {
-  /* line 189, ../sass/home.scss */
+  /* line 198, ../sass/home.scss */
   .home_page_quote_block {
     margin-bottom: 20px;
   }
 }
-/* line 200, ../sass/home.scss */
+/* line 209, ../sass/home.scss */
 .home_page_quote_block .quote {
   width: 85%;
   color: #0086dd;
@@ -305,62 +316,62 @@ body.front .main-container.container {
   font-weight: 500;
   background: aliceblue;
 }
-/* line 206, ../sass/home.scss */
+/* line 215, ../sass/home.scss */
 .home_page_quote_block .quote .quote-inner {
   background: url(../images/top.png) 15px 10px no-repeat, url(../images/btm.png) right bottom no-repeat;
   padding: 50px 70px 60px 75px;
 }
 @media screen and (max-width: 480px) {
-  /* line 206, ../sass/home.scss */
+  /* line 215, ../sass/home.scss */
   .home_page_quote_block .quote .quote-inner {
     background-size: 40px;
     padding: 45px 20px 45px 45px;
   }
 }
 @media screen and (max-width: 991px) {
-  /* line 200, ../sass/home.scss */
+  /* line 209, ../sass/home.scss */
   .home_page_quote_block .quote {
     width: calc(100% - 20px);
   }
 }
 @media screen and (max-width: 767px) {
-  /* line 200, ../sass/home.scss */
+  /* line 209, ../sass/home.scss */
   .home_page_quote_block .quote {
     width: 100%;
   }
 }
-/* line 220, ../sass/home.scss */
+/* line 229, ../sass/home.scss */
 .home_page_quote_block .quote .quote-text {
   width: 80%;
   font-size: 1.4rem;
   font-weight: 500;
 }
 @media screen and (max-width: 1199px) {
-  /* line 220, ../sass/home.scss */
+  /* line 229, ../sass/home.scss */
   .home_page_quote_block .quote .quote-text {
     width: 100%;
   }
 }
-/* line 228, ../sass/home.scss */
+/* line 237, ../sass/home.scss */
 .home_page_quote_block .quote .quote-author {
   font-style: italic;
   margin-top: 20px;
 }
 
 @media screen and (max-width: 991px) {
-  /* line 238, ../sass/home.scss */
+  /* line 247, ../sass/home.scss */
   body.front .footer {
     width: calc(100% - 25px);
   }
 }
 @media screen and (max-width: 767px) {
-  /* line 238, ../sass/home.scss */
+  /* line 247, ../sass/home.scss */
   body.front .footer {
     text-align: center;
   }
 }
 
-/* line 247, ../sass/home.scss */
+/* line 256, ../sass/home.scss */
 .block-webform.contact-form {
   display: inline-block;
   max-width: 350px;
@@ -374,12 +385,12 @@ body.front .main-container.container {
   text-align: left;
 }
 @media screen and (min-width: 768px) {
-  /* line 247, ../sass/home.scss */
+  /* line 256, ../sass/home.scss */
   .block-webform.contact-form {
     margin-left: auto;
   }
 }
-/* line 261, ../sass/home.scss */
+/* line 270, ../sass/home.scss */
 .block-webform.contact-form .block-title {
   text-transform: uppercase;
   font-weight: 800;
@@ -387,12 +398,12 @@ body.front .main-container.container {
   margin-bottom: 25px;
 }
 @media screen and (max-width: 480px) {
-  /* line 261, ../sass/home.scss */
+  /* line 270, ../sass/home.scss */
   .block-webform.contact-form .block-title {
     font-size: 2.4rem;
   }
 }
-/* line 269, ../sass/home.scss */
+/* line 278, ../sass/home.scss */
 .block-webform.contact-form .block-title:after {
   content: "";
   height: 3px;
@@ -401,16 +412,16 @@ body.front .main-container.container {
   display: block;
   margin-top: 7px;
 }
-/* line 279, ../sass/home.scss */
+/* line 288, ../sass/home.scss */
 .block-webform.contact-form form label {
   font-size: 1.2rem;
   font-weight: 500;
 }
-/* line 283, ../sass/home.scss */
+/* line 292, ../sass/home.scss */
 .block-webform.contact-form form .form-actions {
   text-align: center;
 }
-/* line 285, ../sass/home.scss */
+/* line 294, ../sass/home.scss */
 .block-webform.contact-form form .form-actions button {
   background: #eae9ef;
   border: 0;
